--- a/css/sass/boot/bootstrap.scss
+++ b/css/sass/boot/bootstrap.scss
@@ -15,7 +15,7 @@
 @import "type";
 @import "code";
 @import "forms";
-//@import "tables";
+@import "tables";
 
 // Components: common
 //@import "sprites"; replaced with Font Awesome
