--- a/css/sass/custom/_style.scss
+++ b/css/sass/custom/_style.scss
@@ -216,4 +216,9 @@ article.post {
     section {
         font-family : inherit ;
     }
+
+    table  { 
+        @extend .table ;
+        @extend .table-striped ; 
+    }
 }
