--- a/css/style.css
+++ b/css/style.css
@@ -3773,7 +3773,7 @@ footer .container {
     text-decoration: underline; }
 
 h1, h2, h3, h4, h5, h6 {
-  margin: 25px 0px; }
+  margin: 35px 0px; }
 
 article.post {
   font-family: "NanumGothic"; }
@@ -3840,3 +3840,7 @@ article.post {
   text-align: right; }
 .quote .author {
   float: right; }
+
+blockquote {
+  background: #ffeded;
+  border-left: 5px solid #FC9191; }
