--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,13 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8"/>
-		<title>{% if page.title %} {{ page.title }} {% endif %} - Vanilla Bean Creme</title>
+		<title>{% if page.title %} {{ page.title }} {% endif %} - web,web,web</title>
 		<!-- For responsive site
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		-->
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<link rel="author" href="/humans.txt">
-		<meta name="description" content="Description Goes Here">
+		<meta name="description" content="조그마한 저장소.">
 		<link rel="stylesheet" href="/css/style.css">
 		<!--[if IE 7]>
 			<html class="ie7"> 
@@ -18,7 +17,6 @@
 	    <!--[if lt IE 9]>
 	      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	    <![endif]-->
-
 		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="ico/apple-touch-icon-144-precomposed.png">
 		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="ico/apple-touch-icon-114-precomposed.png">
 		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="ico/apple-touch-icon-72-precomposed.png">
