--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="description" content="조그마한 저장소.">
 		<link rel="stylesheet" href="/css/style.css">
+		<link rel="stylesheet" href="/css/syntax.css">
 		<!--[if IE 7]>
 			<html class="ie7"> 
 			<link rel="stylesheet" type="text/css" href="/css/font-awesome-ie7.min.css">
